--- a/dports/devel/asimov-cli/Portfile
+++ b/dports/devel/asimov-cli/Portfile
@@ -8,22 +8,13 @@ description         "Asimov CLI Tool"
 homepage            https://github.com/asimov-platform/asimov-cli
 license             MIT
 
-if {${os.platform} eq "darwin"} {
-    if {${configure.build_arch} eq "arm64"} {
-        distfiles      "asimov-macos-arm.gz"
-        checksums      sha256 af05128473c3dfda48e7740d2a456a7996a6391ac46a3ef0620cb803afaeb793
-    } else {
-        distfiles      "asimov-macos-x86.gz"
-        checksums      sha256 332f2a586bb3d702db60b165f09b96a01995034a35ab109713d01ba53f0cb2cf
-    }
-} elseif {${os.platform} eq "linux"} {
-    if {${configure.build_arch} eq "arm64"} {
-        distfiles      "asimov-linux-arm.gz"
-        checksums      sha256 e9ca2393fe6147a01f10a36bd162b8f014fcfc1e964bb65a33e6d0920b34960d
-    } else {
-        distfiles      "asimov-linux-x86.gz"
-        checksums      sha256 a64251f846d0cc0280a7f83f25f0db0c4f15ef4caf349ccd45dad22250866060
-    }
+# Determine architecture-specific download
+if {${configure.build_arch} eq "arm64"} {
+    distfiles      "asimov-macos-arm.gz"
+    checksums      sha256 af05128473c3dfda48e7740d2a456a7996a6391ac46a3ef0620cb803afaeb793
+} else {
+    distfiles      "asimov-macos-x86.gz"
+    checksums      sha256 332f2a586bb3d702db60b165f09b96a01995034a35ab109713d01ba53f0cb2cf
 }
 
 master_sites        https://github.com/asimov-platform/asimov-cli/releases/download/${version}/
